--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,12 @@
         "glslify-deps": "^1.3.2",
         "jsdoc": "^3.6.6",
         "jsdoc-to-markdown": "^7.0.1",
-        "parcel-bundler": "^1.12.4"
+        "parcel-bundler": "^1.12.4",
+        "paho-mqtt": "^1.1.0"
     },
     "scripts": {
         "watch": "parcel watch src/index.js -o points.js",
-        "build": "parcel build src/index.js -o points.js --public-url ./dist --global POINTS"
+        "build": "parcel build src/index.js -o points.js --public-url ./dist --global POINTS",
+        "serve": "python3 -m http.server 8000"
     }
 }
