--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "last 3 safari versions"
     ],
     "dependencies": {
+        "hls.js": "^1.1.5-0.canary.8257",
         "three": "^0.128.0"
     },
     "devDependencies": {
@@ -22,8 +23,8 @@
         "glslify-deps": "^1.3.2",
         "jsdoc": "^3.6.6",
         "jsdoc-to-markdown": "^7.0.1",
-        "parcel-bundler": "^1.12.4",
-        "paho-mqtt": "^1.1.0"
+        "paho-mqtt": "^1.1.0",
+        "parcel-bundler": "^1.12.4"
     },
     "scripts": {
         "watch": "parcel watch src/index.js -o points.js",
