--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     ],
     "dependencies": {
         "hls.js": "^1.1.5-0.canary.8257",
-        "three": "^0.128.0"
+        "aframe": "^1.3.0",
+        "super-three": "0.128.0",
+        "three": "npm:super-three@0.137.0"
     },
     "devDependencies": {
         "babel-eslint": "^10.1.0",
@@ -23,7 +25,6 @@
         "glslify-deps": "^1.3.2",
         "jsdoc": "^3.6.6",
         "jsdoc-to-markdown": "^7.0.1",
-        "paho-mqtt": "^1.1.0",
         "parcel-bundler": "^1.12.4"
     },
     "scripts": {
